Normalize DOCTYPE declaration and enhance CSS styles for better layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
@@ -37,7 +37,7 @@
             tecnología en beneficio de tu negocio. Nuestro experiencia como
             agencia digital nos permiten acercarte a tus objetivos comerciales.
           </p>
-          <a href="contacto.html" class="btn-cta-highlight">Empezar Proyecto</a>
+          <a href="#btn-cto" class="btn-cta-highlight">Empezar Proyecto</a>
         </div>
       </section>
 
@@ -47,9 +47,12 @@
           <p class="ico">💻</p>
           <h2 class="content-title">Desarrollo Web</h2>
           <p>
-            Desarrollamos páginas web de alta calidad aplicando las últimas
-            tecnologías, creando soluciones rápidas, seguras y totalmente
-            adaptadas a las necesidades de tu negocio.
+            Desarrollamos páginas web de alta calidad aplicando las tecnologías
+            más avanzadas del sector. Creamos soluciones rápidas, seguras y
+            totalmente optimizadas para ofrecer el mejor rendimiento. Cada
+            proyecto se adapta por completo a las necesidades de tu negocio,
+            garantizando una experiencia moderna, funcional y preparada para
+            crecer contigo.
           </p>
         </section>
         <section class="service-item2">
@@ -70,7 +73,9 @@
         </section>
       </div>
       <div class="cta-container">
-        <a href="contacto.html" class="btn-cta-highlight">Contactar Ahora </a>
+        <a href="contacto.html" class="btn-cta-highlight" id="btn-cto"
+          >Contactar Ahora
+        </a>
       </div>
     </main>
 
