Ajustar estilos CSS para mejorar la apariencia y la transición de elementos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="Construye la web de tus sueños. Consultoría especializada en desarrollo web"
     />
+    <!-- <meta name="theme-color" content="#1bb421" /> -->
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
     <title>TralaTech</title>
