Mejorar estilos y estructura en proyecto de reservas: ajustar textarea, optimizar tamaños de fuente y modificar la estructura de botones.

--- a/proyecto-reserva.html
+++ b/proyecto-reserva.html
@@ -27,7 +27,7 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="main-sgr">
       <section class="sgr">
         <h1>Sistema de Gestión de Reservas</h1>
         <p>
@@ -58,9 +58,9 @@
         </p>
       </section>
 
-      <section class="cta-proyecto">
+      <button class="cta-proyecto">
         <a href="contacto.html" class="btn-cta">Solicitar Información</a>
-      </section>
+      </button>
     </main>
     <aside>
       <section class="info">
