--- a/proyecto-reserva.html
+++ b/proyecto-reserva.html
@@ -38,23 +38,52 @@
         </p>
       </section>
 
-      <section class="caracteristicas">
-        <h2>Características Principales</h2>
-        <ul>
-          <li>Panel de administración intuitivo y responsive</li>
-          <li>Gestión de clientes, horarios y disponibilidad</li>
-          <li>Confirmaciones automáticas por correo</li>
-          <li>Historial de reservas y estadísticas</li>
-          <li>Integración con pasarelas de pago</li>
-        </ul>
-      </section>
+      <div class="container">
+        <div class="left">
+          <section class="caracteristicas">
+            <h2>Características Principales</h2>
+            <ul>
+              <li>Panel de administración intuitivo y responsive</li>
+              <li>Gestión de clientes, horarios y disponibilidad</li>
+              <li>Confirmaciones automáticas por correo</li>
+              <li>Historial de reservas y estadísticas</li>
+              <li>Integración con pasarelas de pago</li>
+            </ul>
+          </section>
 
-      <section class="beneficios">
-        <h2>Beneficios para tu Empresa</h2>
-        <p>
-          Con nuestro sistema podrás optimizar tu tiempo, reducir errores
-          humanos y ofrecer una experiencia profesional a tus clientes. Todo
-          ello con una interfaz moderna y adaptable a cualquier dispositivo.
+          <section class="beneficios">
+            <h2>Beneficios para tu Empresa</h2>
+            <p>
+              Con nuestro sistema podrás optimizar tu tiempo, reducir errores
+              humanos y ofrecer una experiencia profesional a tus clientes. Todo
+              ello con una interfaz moderna y adaptable a cualquier dispositivo.
+            </p>
+          </section>
+        </div>
+
+        <aside>
+          <section class="info">
+            <h3>Información</h3>
+            <ul>
+              <li>Implementación en menos de 48h</li>
+              <li>Soporte técnico incluido</li>
+              <li>Actualizaciones automáticas</li>
+              <li>Compatible con móviles y tablets</li>
+            </ul>
+          </section>
+        </aside>
+      </div>
+
+      <section class="precio">
+        <h2>Planes Disponibles</h2>
+        <p class="basic">
+          <strong>Básico:</strong> Gestión de reservas y clientes
+        </p>
+        <p class="pro">
+          <strong>Profesional:</strong> Estadísticas + automatizaciones
+        </p>
+        <p class="premium">
+          <strong>Premium:</strong> Integración con pagos online
         </p>
       </section>
 
@@ -62,24 +91,6 @@
         <a href="contacto.html" class="btn-cta">Solicitar Información</a>
       </button>
     </main>
-    <aside>
-      <section class="info">
-        <h3>Información</h3>
-        <ul>
-          <li>Implementación en menos de 48h</li>
-          <li>Soporte técnico incluido</li>
-          <li>Actualizaciones automáticas</li>
-          <li>Compatible con móviles y tablets</li>
-        </ul>
-      </section>
-
-      <section class="precio">
-        <h3>Planes Disponibles</h3>
-        <p><strong>Básico:</strong> Gestión de reservas y clientes</p>
-        <p><strong>Profesional:</strong> Estadísticas + automatizaciones</p>
-        <p><strong>Premium:</strong> Integración con pagos online</p>
-      </section>
-    </aside>
     <footer>copyright &copy; 2025</footer>
   </body>
 </html>
