Actualizar páginas HTML y CSS: mejorar la estructura de contacto, cronología y reservas, añadir nuevos estilos y optimizar la responsividad.

--- a/proyecto-reserva.html
+++ b/proyecto-reserva.html
@@ -17,6 +17,7 @@
       <h1 id="titulo"><a href="index.html">TralaTech</a></h1>
       <nav class="menu">
         <ul class="menu-list">
+          <li><a href="index.html">inicio</a></li>
           <li><a href="proyecto-reserva.html">reserva</a></li>
           <li><a href="cronologia.html">cronología</a></li>
           <li>
@@ -76,21 +77,71 @@
 
       <section class="precio">
         <h2>Planes Disponibles</h2>
-        <p class="basic">
-          <strong>Básico:</strong> Gestión de reservas y clientes
-        </p>
-        <p class="pro">
-          <strong>Profesional:</strong> Estadísticas + automatizaciones
-        </p>
-        <p class="premium">
-          <strong>Premium:</strong> Integración con pagos online
-        </p>
+
+        <article class="card">
+          <h3>Básico</h3>
+          <p class="price">29€/mes</p>
+          <ul>
+            <li>✅ Gestión de reservas ilimitadas</li>
+            <li>✅ Gestión de clientes básica</li>
+            <li>✅ Email de confirmación automático</li>
+            <li>✅ Calendario interactivo</li>
+            <li>✅ Acceso desde móvil y tablet</li>
+            <li>❌ Estadísticas avanzadas</li>
+            <li>❌ Pagos online</li>
+          </ul>
+          <a href="contacto.html" class="btn-card">Elegir Plan</a>
+        </article>
+
+        <article class="card">
+          <h3>Profesional</h3>
+          <p class="price">59€/mes</p>
+          <ul>
+            <li>✅ <strong>Todo lo del plan Básico</strong></li>
+            <li>✅ Estadísticas avanzadas y reportes</li>
+            <li>✅ Recordatorios por SMS y Email</li>
+            <li>✅ Integración con Google Calendar</li>
+            <li>✅ Automatizaciones de marketing</li>
+            <li>❌ Pasarela de pagos online</li>
+            <li>❌ App móvil personalizada</li>
+          </ul>
+          <a href="contacto.html" class="btn-card">Elegir Plan</a>
+        </article>
+
+        <article class="card">
+          <h3>Premium</h3>
+          <p class="price">99€/mes</p>
+          <ul>
+            <li>✅ <strong>Todo lo del plan Profesional</strong></li>
+            <li>✅ Pasarela de pagos online integrada</li>
+            <li>✅ App móvil personalizada (Android/iOS)</li>
+            <li>✅ Soporte técnico prioritario 24/7</li>
+            <li>✅ Gestor de cuenta dedicado</li>
+            <li>✅ Formación para empleados</li>
+          </ul>
+          <a href="contacto.html" class="btn-card">Elegir Plan</a>
+        </article>
       </section>
 
       <button class="cta-proyecto">
         <a href="contacto.html" class="btn-cta">Solicitar Información</a>
       </button>
     </main>
-    <footer>copyright &copy; 2025</footer>
+    <footer>
+      <div>
+        <p>&copy; 2025 TralaTech. Todos los derechos reservados.</p>
+        <address>
+          <p>📍 Calle Innovación 42, Madrid</p>
+          <p>📧 TralaTech@Tech.com</p>
+          <p>📞 +34 666 666 666</p>
+        </address>
+        <div class="social-links">
+          <a href="https://facebook.com">Facebook</a>
+          <a href="https://twitter.com">Twitter</a>
+          <a href="https://instagram.com">Instagram</a>
+        </div>
+        <a href="#" class="legal-link">Aviso Legal</a>
+      </div>
+    </footer>
   </body>
 </html>
