--- a/contacto.html
+++ b/contacto.html
@@ -1,47 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Contacto" />
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Contacto</title>
-  </head>
-  <body>
-    <header>
-      <h1 id="titulo"><a href="index.html">TralaTech</a></h1>
-      <nav class="menu">
-        <ul class="menu-list">
-          <li><a href="proyecto-reserva.html">reserva</a></li>
-          <li><a href="cronologia.html">cronología</a></li>
-          <li>
-            <a class="btn-cta-highlight" href="contacto.html"
-              >Empezar proyecto</a
-            >
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <form
-        action=" morning-paper-a0fc.contry-1990.workers.dev"
-        method="post"
-        autocomplete="off"
-      >
-        <label for="nombre">Nombre</label>
-        <input type="text" name="nombre" id="nombre" required />
-        <label for="email">Email</label>
-        <input type="email" name="email" id="email" required />
-        <label for="motivo">Motivo</label>
-        <textarea name="motivo" id="motivo" minlength="10" required></textarea>
-        <label for="privacidad">
-          <input type="checkbox" name="privacidad" id="privacidad" required />
-          Aceptar la política de privacidad</label
-        >
-        <button>enviar</button>
-      </form>
-    </main>
-    <footer>copyright &copy; 2025</footer>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Contacta ahora con nosotros. Correo: TralaTech@Tech.com Numero: +34 666666666" />
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>Contacto</title>
+</head>
+
+<body>
+  <header>
+    <h1 id="titulo"><a href="index.html">TralaTech</a></h1>
+    <nav class="menu">
+      <ul class="menu-list">
+        <li><a href="index.html">inicio</a></li>
+        <li><a href="proyecto-reserva.html">reserva</a></li>
+        <li><a href="cronologia.html">cronología</a></li>
+        <li>
+          <a class="btn-cta-highlight" href="contacto.html">Empezar proyecto</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <form action=" morning-paper-a0fc.contry-1990.workers.dev" method="post" autocomplete="off">
+      <label for="nombre">Nombre</label>
+      <input type="text" name="nombre" id="nombre" minlength="2" maxlength="50" required />
+      <label for="email">Email</label>
+      <input type="email" name="email" id="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$" required />
+      <label for="motivo">Motivo</label>
+      <select name="motivo" id="motivo" required>
+        <option value="">Seleccione un motivo</option>
+        <optgroup label="Consultas">
+          <option value="consulta">Consulta</option>
+          <option value="solicitud">Solicitud</option>
+          <option value="otro">Otro</option>
+        </optgroup>
+        <optgroup label="Planes">
+          <option value="plan-basico">Plan Básico - 29€/mes</option>
+          <option value="plan-profesional">Plan Profesional - 59€/mes</option>
+          <option value="plan-premium">Plan Premium - 99€/mes</option>
+        </optgroup>
+
+      </select>
+      <label for="privacidad">
+        <input type="checkbox" name="privacidad" id="privacidad" required />
+        Aceptar la política de privacidad</label>
+      <button>enviar</button>
+    </form>
+  </main>
+  <footer>
+    <div>
+      <p>&copy; 2025 TralaTech. Todos los derechos reservados.</p>
+      <address>
+        <p>📍 Calle Innovación 42, Madrid</p>
+        <p>📧 TralaTech@Tech.com</p>
+        <p>📞 +34 666 666 666</p>
+      </address>
+      <div class="social-links">
+        <a href="https://facebook.com">Facebook</a>
+        <a href="https://twitter.com">Twitter</a>
+        <a href="https://linkedin.com">LinkedIn</a>
+        <a href="https://instagram.com">Instagram</a>
+      </div>
+      <a href="#" class="legal-link">Aviso Legal</a>
+    </div>
+  </footer>
+</body>
+
 </html>
