--- a/cronologia.html
+++ b/cronologia.html
@@ -3,16 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="cronologia" />
+    <meta name="description" content="cronología del proyecto" />
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Cronologia</title>
   </head>
+
   <body>
     <header>
       <h1 id="titulo"><a href="index.html">TralaTech</a></h1>
       <nav class="menu">
         <ul class="menu-list">
+          <li><a href="index.html">inicio</a></li>
           <li><a href="proyecto-reserva.html">reserva</a></li>
           <li><a href="cronologia.html">cronología</a></li>
           <li>
@@ -23,7 +25,95 @@
         </ul>
       </nav>
     </header>
-    <main></main>
-    <footer>copyright &copy; 2025</footer>
+    <main>
+      <section class="cronologia">
+        <h1>Cronología del Proyecto</h1>
+        <p>Detalle de las fases de desarrollo e implementación del sistema.</p>
+
+        <div class="table-container">
+          <table class="cronologia-table">
+            <thead>
+              <tr>
+                <th>Fase</th>
+                <th>Descripción</th>
+                <th>Fecha de Inicio</th>
+                <th>Fecha Fin</th>
+                <th>Estado</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1. Análisis</td>
+                <td>
+                  Reunión inicial y levantamiento de requisitos con el cliente.
+                </td>
+                <td>01/02/2026</td>
+                <td>03/02/2026</td>
+                <td><span class="completed">Completado</span></td>
+              </tr>
+              <tr>
+                <td>2. Diseño</td>
+                <td>Creación de wireframes, prototipos y diseño UI/UX.</td>
+                <td>04/02/2026</td>
+                <td>10/02/2026</td>
+                <td><span class="in-progress">En Progreso</span></td>
+              </tr>
+              <tr>
+                <td>3. Desarrollo Frontend</td>
+                <td>Maquetación HTML/CSS y lógica cliente.</td>
+                <td>11/02/2026</td>
+                <td>25/02/2026</td>
+                <td><span class="pending">Pendiente</span></td>
+              </tr>
+              <tr>
+                <td>4. Desarrollo Backend</td>
+                <td>Configuración de servidor, base de datos y API.</td>
+                <td>15/02/2026</td>
+                <td>28/02/2026</td>
+                <td><span class="pending">Pendiente</span></td>
+              </tr>
+              <tr>
+                <td>5. Pruebas</td>
+                <td>
+                  Tests funcionales, de seguridad y corrección de errores.
+                </td>
+                <td>01/03/2026</td>
+                <td>05/03/2026</td>
+                <td><span class="pending">Pendiente</span></td>
+              </tr>
+              <tr>
+                <td>6. Despliegue</td>
+                <td>Puesta en producción y entrega final.</td>
+                <td>06/03/2026</td>
+                <td>07/03/2026</td>
+                <td><span class="pending">Pendiente</span></td>
+              </tr>
+            </tbody>
+            <tfoot>
+              <tr>
+                <td colspan="5">Tiempo total estimado: 5 semanas</td>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div>
+        <p>&copy; 2025 TralaTech. Todos los derechos reservados.</p>
+        <address>
+          <p>📍 Calle Innovación 42, Madrid</p>
+          <p>📧 TralaTech@Tech.com</p>
+          <p>📞 +34 666 666 666</p>
+        </address>
+        <div class="social-links">
+          <a href="https://facebook.com" aria-label="Facebook">FB</a>
+          <a href="https://twitter.com" aria-label="Twitter">TW</a>
+          <a href="https://linkedin.com" aria-label="LinkedIn">LN</a>
+          <a href="https://instagram.com" aria-label="Instagram">IG</a>
+        </div>
+        <a href="#" class="legal-link">Aviso Legal</a>
+      </div>
+    </footer>
   </body>
 </html>
