--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <h1 id="titulo"><a href="index.html">TralaTech</a></h1>
       <nav class="menu">
         <ul class="menu-list">
+          <li><a href="index.html">inicio</a></li>
           <li><a href="proyecto-reserva.html">reserva</a></li>
           <li><a href="cronologia.html">cronología</a></li>
           <li>
@@ -81,6 +82,22 @@
     </main>
 
     <!-- sin acabar -->
-    <footer>copyright &copy; 2025</footer>
+    <footer>
+      <div>
+        <p>&copy; 2025 TralaTech. Todos los derechos reservados.</p>
+        <address>
+          <p>📍 Calle Innovación 42, Madrid</p>
+          <p>📧 TralaTech@Tech.com</p>
+          <p>📞 +34 666 666 666</p>
+        </address>
+        <div class="social-links">
+          <a href="https://facebook.com">Facebook</a>
+          <a href="https://twitter.com">Twitter</a>
+          <a href="https://linkedin.com">LinkedIn</a>
+          <a href="https://instagram.com">Instagram</a>
+        </div>
+        <a href="#" class="legal-link">Aviso Legal</a>
+      </div>
+    </footer>
   </body>
 </html>
