--- a/proyecto-reserva.html
+++ b/proyecto-reserva.html
@@ -10,6 +10,12 @@
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Reserva</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Galdeano:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -131,16 +137,21 @@
       <div>
         <p>&copy; 2025 TralaTech. Todos los derechos reservados.</p>
         <address>
-          <p>📍 Calle Innovación 42, Madrid</p>
+          <p>📍 Calle Illueca, 28, 03206 Elche, Alicante</p>
           <p>📧 TralaTech@Tech.com</p>
           <p>📞 +34 666 666 666</p>
         </address>
-        <div class="social-links">
-          <a href="https://facebook.com">Facebook</a>
-          <a href="https://twitter.com">Twitter</a>
-          <a href="https://instagram.com">Instagram</a>
+        <div class="social">
+          <a href="https://facebook.com" target="_blank">Facebook</a>
+          <a href="https://twitter.com" target="_blank">Twitter</a>
+          <a href="https://instagram.com" target="_blank">Instagram</a>
         </div>
-        <a href="#" class="legal-link">Aviso Legal</a>
+        <a
+          href="https://www.google.com/search?q=aviso+legal&oq=aviso+legal&gs_lcrp=EgRlZGdlKgkIABBFGDkYgAQyCQgAEEUYORiABDIHCAEQABiABDIHCAIQABiABDIHCAMQABiABDIHCAQQABiABDIHCAUQABiABDIHCAYQABiABDIHCAcQABiABNIBCDE3MjVqMGoxqAIAsAIA&sourceid=chrome&ie=UTF-8"
+          class="legal"
+          target="_blank"
+          >Aviso Legal</a
+        >
       </div>
     </footer>
   </body>
